@@ -1,9 +1,11 @@
 package com.LuanVanTotNghiep.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import com.LuanVanTotNghiep.Mapper.SubjectMapper;
+import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
 
 import com.LuanVanTotNghiep.dto.response.SubjectResponse;
@@ -11,19 +13,19 @@ import com.LuanVanTotNghiep.models.Subject;
 import com.LuanVanTotNghiep.repository.SubjectRepository;
 
 @Service
+@RequiredArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE,makeFinal = true)
 public class SubjectServiceImpl implements SubjectService {
-	
-	@Autowired
-	private SubjectRepository subjectRepository;
+
+	SubjectRepository subjectRepository;
+	SubjectMapper subjectMapper;
 
 	@Override
 	public List<SubjectResponse> getAllSubject() {
-//		List<Subject> subjects = subjectRepository.findAll();
-//
-//		List<SubjectResponse> subjectResponses = subjects.stream().map(subject -> SubjectResponse.MapSujectToDTO(subject)).collect(Collectors.toList());
-//
-//		return subjectResponses;
-		return null;
+
+		List<Subject> subjectList = subjectRepository.findAll();
+
+		return subjectList.stream().map(subjectMapper::toSubjectResponse).toList();
 	}
 
 }
